# natcomproject

./: .gitignore  README.md  cluster_run.sh  main.py  pyproject.toml  start.py  visualize_maze.py
.omo/evidence/: task-1-import-smoke.txt  task-1-pytest-collect.txt  task-11-collect.txt  task-11-output.txt  task-12-collect.txt  task-12-output.txt  (+18 more)
docs/: bibliography-project.bib  naco-proposal.txt  naco-report.aux  naco-report.bbl  naco-report.blg  naco-report.out  naco-report.tex  naco-report.txt
figures/: MANIFEST.txt  summary_table.tex
results/: README.md  aggregate_summary.txt  ga_iteration_budget.csv  ga_sensitivity.csv  hypothesis_report.txt  hypothesis_report.txt.pre-canonical  pilot_summary.txt  runs.csv  runs.csv.pre-canonical  runs_pilot.csv  runs_quick.csv  statistical_analysis.txt  statistical_analysis_cis.csv  statistical_analysis_pairwise.csv
scripts/: aggregate_summary.py  figures.py  finalize_run.sh  ga_iteration_budget_sweep.py  ga_sensitivity_sweep.py  hypothesis_report.py  maze_figure.py  preflight_validate_seeds.py  preview_mazes.py  statistical_analysis.py  visualize_run.py
src/: config.py  results_writer.py  runner.py
tests/: conftest.py  test_aco_characterization.py  test_aco_integration.py  test_aco_invariants.py  test_aco_pheromone_deposit.py  test_aco_pheromone_evaporation.py  test_ga_characterization.py  test_ga_crossover.py  test_ga_integration.py  test_ga_invariants.py  test_ga_mutation.py  test_pso_characterization.py  test_pso_integration.py  test_pso_invariants.py  test_pso_position_update.py  test_pso_velocity_update.py
(+34 files in other folders)
